--- a/desktop/index.html
+++ b/desktop/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="style.css" />
 
 <div class="window-layer"></div>
-<div class="side-tray"></div>
+<div class="side-tray"><x-dummy></x-dummy></div>
 <div class="bottom-bg"></div><div class="bottom"><div class="icon home"></div><div class="icon menu"></div><div class="icon back right"></div></div>
 
 <script src="desktop.js"></script>
