--- a/desktop/index.html
+++ b/desktop/index.html
@@ -5,4 +5,5 @@
 <div class="side-tray"><x-dummy></x-dummy></div>
 <div class="bottom-bg"></div><div class="bottom"><div class="icon home"></div><div class="icon menu"></div><div class="icon back right"></div></div>
 
-<script src="desktop.js"></script>
+<script src="http://ascha.eu/app/sjssm/js/sjssm.js"></script>
+<script src="./desktop.js"></script>
