--- a/time-pp/index.html
+++ b/time-pp/index.html
@@ -2,3 +2,7 @@
 <link rel="stylesheet" href="./style.css" />
 
 <h1>Time++</h1>
+<p>
+  Time++ is a timer I'm making to help me be more productive.
+</p>
+<div id="controls"></div>
