--- a/time-pp/index.html
+++ b/time-pp/index.html
@@ -6,3 +6,4 @@
   Time++ is a timer I'm making to help me be more productive.
 </p>
 <div id="controls"></div>
+<script src="./tpp-main.js"></script>
