--- a/3Dproject/index.html
+++ b/3Dproject/index.html
@@ -1,1 +1,12 @@
-
+<html>
+  <head>
+    <title>
+      3D projection
+    </title>
+    <link rel="stylesheet" href="/master.css" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <script src="./projection.js"></script>
+  </body>
+</html>
