--- a/3Dproject/index.html
+++ b/3Dproject/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <canvas></canvas>
     <script src="./projection.js"></script>
   </body>
 </html>
