--- a/threedee/index.html
+++ b/threedee/index.html
@@ -1,1 +1,4 @@
+<title>3D</title>
+<link rel="stylesheet" href="./style.css" />
 <canvas width="800" height="600"></canvas>
+<script src="./index.js"></script>
