--- a/card/index.html
+++ b/card/index.html
@@ -100,5 +100,5 @@
   </div>
 </div>
 <script>
-document.body.style.background = location.search.length ? location.search.substring(1) : "transparent"
+document.body.style.background = location.hash.length ? location.hash : "transparent"
 </script>
