--- a/card/index.html
+++ b/card/index.html
@@ -1,5 +1,10 @@
 <style>
 @import url("https://fonts.googleapis.com/css?family=Roboto:100");
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 .wrap {
   width: 100vw;
   height: 100vh;
