--- a/card/index.html
+++ b/card/index.html
@@ -28,7 +28,7 @@ body {
   font: 100 1em Roboto;
   color: #455;
 }
-.wrap .card div h1 {
+.wrap .card div h1, .wrap .card div h2, .wrap .card div h3 {
   text-align: center;
 }
 .wrap .card .front {
