--- a/card/index.html
+++ b/card/index.html
@@ -36,8 +36,8 @@ body {
   color: #999;
 }
 .wrap .card .front .image {
-  width: 5vw;
-  height: 5vw;
+  width: 10vh;
+  height: 10vh;
   border-radius: 2.5vw;
   position: absolute;
   top: 50px;
