--- a/card/index.html
+++ b/card/index.html
@@ -38,7 +38,7 @@ body {
 .wrap .card .front .image {
   width: 10vh;
   height: 10vh;
-  border-radius: 2.5vw;
+  border-radius: 10vh;
   position: absolute;
   top: 50px;
   left: 50%;
@@ -46,9 +46,9 @@ body {
 }
 .wrap .card .front .about {
   width: 95vw;
-  height: calc(90vh - 60px);
+  height: 70vh;
   position: absolute;
-  top: calc(5vw + 50px);
+  top: 20vh;
   left: 50%;
   transform: translateX(-50%);
 }
